# symfetch

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  comment.yml  docs.yml
src/: config_handler.rs  data.rs  lib.rs  main.rs  system_info.rs
src/util/: mod.rs  path_utils.rs
tests/: only_ascii.toml  only_image.toml  test_ascii_path.rs  test_config.rs
tests/util/: test_get_path.rs
