[package]
name = "symfetch"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.35", features = ["cargo"] }
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"

image = { version = "0.24.9", optional = true }
rascii_art = { version = "0.4.5", optional = true }
viuer = { version = "0.9.1", optional = true }
image_025 = { package = "image", version = "0.25", optional = true }

[features]
image-to-ascii = ["dep:rascii_art", "dep:image"]

image = ["dep:viuer", "dep:image_025"]
