[package]
name = "symfetch"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.36", features = ["cargo"] }
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
sysinfo = "0.35"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.5"
colored = "2.1"

image = { version = "0.25" }
rascii_art = { version = "0.4.5", optional = true }
termimage = { version = "~1.2.0", optional = true }

[features]
default = ["image"]
image = [ "dep:termimage"]
image-to-ascii = ["dep:rascii_art"]

[package.metadata.feature-conflict]
"image" = ["image-to-ascii"]
